--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Abel Archives</title>
+        <title>Abel Archive</title>
     </head>
     <body>
     <h1>Mi portafolio</h1>
+    <img src="abelito.gif">.
     Ramirez Urias Abel
     </body>
 </html>
