--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <title>Abel Archive</title>
     </head>
     <body>
-    <h1>Mi portafolio</h1>
-    <img src="abelito.gif">.
+    <h1>Mi portafolio <img src="abelito.gif" width="30%">.</h1>
     Ramirez Urias Abel
     </body>
 </html>
