--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
     <h1>Mi portafolio</h1>
-    <img style="vertical-align:middle" src="abelito.gif" width="5%"> Ramirez Urias Abel
+    <img style="vertical-align:middle" src="abelito.gif" width="5%"> Ramirez Urias Abel<br>
+    <a href="practicaparcial1">Portafolio Parcial 1</a>
     </body>
 </html>
