--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Abel Archive</title>
     </head>
+        <style>
+        body {
+          background-image: url('bg.webp');
+          background-repeat: no-repeat;
+          width: "500%";
+          color: white;
+        }
+        </style>
     <body>
     <h1>Mi portafolio</h1>
     <img style="vertical-align:middle" src="abelito.gif" width="5%"> Ramirez Urias Abel<br>
