--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
         <style>
         body {
-          background-image: url('bg.jpg');
+          background-image: url('bg.webp');
           background-repeat: no-repeat;
           width: "500%";
           color: white;
