--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -6,6 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Practicas parcial #1</title>
     </head>
+        <style>
+        body {
+          background-image: url('bg.webp');
+          background-repeat: no-repeat;
+          width: "500%";
+          color: white;
+        }
+        </style>
     <body>
 
     <table border="1">
