--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -19,7 +19,7 @@
           text-decoration: none;
         }
         a:visited {
-          color: gray;
+          color: silver;
           background-color: transparent;
           text-decoration: none;
         }
