--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
           width: "500%";
           color: white;
         }
+            a:link {
+          color: white;
+          background-color: transparent;
+          text-decoration: none;
+        }
+        a:visited {
+          color: silver;
+          background-color: transparent;
+          text-decoration: none;
+        }
+        a:hover {
+          color: black;
+          background-color: transparent;
+          text-decoration: underline;
+        }
         </style>
     <body>
     <h1>Mi portafolio</h1>
