--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <style>
         body {
           background-image: url('bg.webp');
-          background-repeat: no-repeat;
+          background-repeat: repeat;
           width: "500%";
           color: white;
         }
