--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
         <style>
         body {
-          background-image: url('bg.webp');
+          background-image: url('bg.mp4');
           background-repeat: repeat;
           width: "500%";
           color: white;
