--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -57,15 +57,19 @@
             </tr>
             <tr>
                 <th>Practica 3</th>
-                <th>Elementos basicos de HTML Parte 3</th>
+                <th>Elementos HTML y propiedades CSS</th>
                 <th><a href="parcial1/Practica3_Elementos_HTML_Parte3.html">Visitar</a></th>
             </tr>
             <tr>
                 <th>Practica 4</th>
-                <th>Elementos basicos de HTML Parte 4</th>
+                <th>Manejo de imagenes en HTML</th>
                 <th><a href="parcial1/Practica4_Elementos_HTML_Parte4.html">Visitar</a></th>
             </tr>
-
+            <tr>
+                <th>Practica 5</th>
+                <th>Manejo de tablas en HTML</th>
+                <th><a href="parcial1/Practica5_Elementos_HTML_Parte5.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
