--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -70,6 +70,11 @@
                 <th>Manejo de tablas en HTML</th>
                 <th><a href="parcial1/Practica5_Elementos_HTML_Parte5.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 6</th>
+                <th>Formularios en HTML</th>
+                <th><a href="parcial1/Practica6_Elementos_HTML_Parte6.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
