--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -75,6 +75,12 @@
                 <th>Formularios en HTML</th>
                 <th><a href="parcial1/Practica6_Elementos_HTML_Parte6.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 7</th>
+                <th>Posicionamientos en HTML
+                </th>
+                <th><a href="parcial1/Practica7_Elementos_HTML_Parte7.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
