--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -77,9 +77,13 @@
             </tr>
             <tr>
                 <th>Practica 7</th>
-                <th>Posicionamientos en HTML
-                </th>
+                <th>Posicionamientos en HTML</th>
                 <th><a href="parcial1/Practica7_Elementos_HTML_Parte7.html">Visitar</a></th>
+            </tr>
+            <tr>
+                <th>Practica 8</th>
+                <th>Juego de loteria  </th>
+                <th><a href="parcial1/Practica8_Elementos_HTML_Parte8.html">Visitar</a></th>
             </tr>
         </tbody>
 
