--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -82,8 +82,13 @@
             </tr>
             <tr>
                 <th>Practica 8</th>
-                <th>Juego de loteria  </th>
+                <th>Juego de loteria</th>
                 <th><a href="parcial1/Practica8_Elementos_HTML_Parte8.html">Visitar</a></th>
+            </tr>
+            <tr>
+                <th>Practica 9</th>
+                <th>Manejo de CSS</th>
+                <th><a href="parcial1/Practica9_Elementos_HTML_Parte9.html">Visitar</a></th>
             </tr>
         </tbody>
 
