--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -90,6 +90,11 @@
                 <th>Manejo de CSS</th>
                 <th><a href="parcial1/Practica9_Elementos_HTML_Parte9.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 10</th>
+                <th>CSS Parte 2</th>
+                <th><a href="parcial1/Practica10_Elementos_HTML_Parte10.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
