--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         }
         </style>
     <body>
-    <h1>Mi portafolio</h1>
-    <img style="vertical-align:middle" src="abelito.gif" width="5%"> Ramirez Urias Abel<br>
+    <h1><img style="vertical-align:middle" src="abelito.gif" width="5%">Mi portafolio</h1> 
+    <h2><img style="vertical-align:middle" src="familiarar.png" width="15%">Ramirez Urias Abel</h2><br>
     <a href="practicaparcial1">Portafolio Parcial 1</a>
     </body>
 </html>
