--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -4,12 +4,12 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Abel Archive</title>
+        <title>Practicas parcial #1</title>
     </head>
         <style>
         body {
           background-image: url('bg.webp');
-          background-repeat: repeat;
+          background-repeat: no-repeat;
           width: "500%";
           color: white;
         }
@@ -30,9 +30,31 @@
         }
         </style>
     <body>
-    <h1><img style="vertical-align:middle" src="abelito.gif" width="5%">Mi portafolio</h1> 
-    <h2><img style="vertical-align:middle" src="familiarar.png" width="15%">Ramirez Urias Abel</h2><br>
-    <a href="practicaparcial1">Portafolio Parcial 1</a><br>
-    <a href="practicaparcial1">Portafolio Parcial 2</a>
+    <a href="abelramu.github.io"><--Volver</a>
+    <table border="1">
+        
+        <thead>
+            <tr>
+                <th>Nombre de la practica</th>
+                <th>Descripcion</th>
+                <th>Hipervinculos</th>
+
+            </tr>
+        </thead>
+
+
+
+        <tbody>
+            <tr>
+                <th>Practica 1</th>
+                <th>Introduccion a bootstrap</th>
+                <th><a href="parcial2/practica1.html">Visitar</a></th>
+            </tr>
+        </tbody>
+
+    </table>
+
+
+
     </body>
 </html>
