Ramirez Urias Abel 10/04/24
Grids en bootstrap

--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -50,6 +50,11 @@
                 <th>Introduccion a bootstrap</th>
                 <th><a href="parcial2/practica1.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 2</th>
+                <th>Grids en bootstrap</th>
+                <th><a href="parcial2/practica2.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
