--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -55,6 +55,11 @@
                 <th>Grids en bootstrap</th>
                 <th><a href="parcial2/practica2.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 3</th>
+                <th>Componentes</th>
+                <th><a href="parcial2/practica3.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
