--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -60,6 +60,11 @@
                 <th>Componentes</th>
                 <th><a href="parcial2/practica3.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 4</th>
+                <th>Componentes</th>
+                <th><a href="parcial2/practica4.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
