--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -62,8 +62,13 @@
             </tr>
             <tr>
                 <th>Practica 4</th>
-                <th>Componentes</th>
+                <th>Componentes parte 2</th>
                 <th><a href="parcial2/practica4.html">Visitar</a></th>
+            </tr>
+            <tr>
+                <th>Practica 5</th>
+                <th>Componentes parte 3</th>
+                <th><a href="parcial2/practica5.html">Visitar</a></th>
             </tr>
         </tbody>
 
