--- a/practicaparcial2.html
+++ b/practicaparcial2.html
@@ -70,6 +70,11 @@
                 <th>Componentes parte 3</th>
                 <th><a href="parcial2/practica5.html">Visitar</a></th>
             </tr>
+            <tr>
+                <th>Practica 6</th>
+                <th>Manejo de tablas en Bootstrap 4</th>
+                <th><a href="parcial2/practica6.html">Visitar</a></th>
+            </tr>
         </tbody>
 
     </table>
