--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-3.7.1.js"></script>
 </head>
-    <h1>hola planeta tierra</h1>
+    <h1>Página de RockstarGames</h1>
 
     <script src="js/bootstrap.js"></script>
 </body>
