Introducción de Bootstrap 26/04/2024
Imitando la página de RockstarGames

--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-3.7.1.js"></script>
 </head>
+  <body>
     <h1>Página de RockstarGames</h1>
 
     <script src="js/bootstrap.js"></script>
