--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -116,7 +116,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
         <div class="row g-10">
           <div class="col-md-8">
 
-            <a class="video1" href="Bodriostar/videos.html">
+            <a class="video1" href="https://abelramu.github.io/Bodriostar/videos.html">
               <img src="img/gta6.webp" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
 
@@ -137,7 +137,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
       <div class="card mb-3" style="max-width: 100%; background-color: black;">
         <div class="row g-10">
           <div class="col-md-8">
-            <a class="video2" href="Bodriostar/videos.html">
+            <a class="video2" href="https://abelramu.github.io/Bodriostar/videos.html">
               <img src="img/farmraid.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
           </div>
