--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -116,7 +116,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
         <div class="row g-10">
           <div class="col-md-8">
 
-            <a class="video1" href="https://abelramu.github.io/Bodriostar/videos.html">
+            <a href="VIDEOS/video1GTAVI.html">
               <img src="img/gta6.webp" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
 
@@ -137,7 +137,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
       <div class="card mb-3" style="max-width: 100%; background-color: black;">
         <div class="row g-10">
           <div class="col-md-8">
-            <a class="video2" href="https://abelramu.github.io/Bodriostar/videos.html">
+            <a href="VIDEOS/video2CLUQUINBEL.html">
               <img src="img/farmraid.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
           </div>
@@ -156,8 +156,13 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
       <div class="card mb-3" style="max-width: 100%; background-color: black;">
         <div class="row g-10">
           <div class="col-md-8">
-            <img src="img/chopshop.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
+
+            <a href="VIDEOS/video3CHOPSHOP.html">
+              <img src="img/chopshop.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
+            </a>
+
           </div>
+
           <div class="col-md-4">
             <div class="card-body" style="padding-left: 70px;">
               <h5 class="card-title gamefont" style="font-size: 17px;"><br><br><br>Grand Theft Auto Online</h5>
@@ -173,7 +178,10 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
         <div class="card mb-3" style="max-width: 100%; background-color: black;">
           <div class="row g-10">
             <div class="col-md-8">
-              <img src="img/dragraces.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
+
+              <a href="VIDEOS/video4DRAGRACES.html">
+                <img src="img/dragraces.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
+              </a>
             </div>
             <div class="col-md-4">
                        <!--col-md-3 reemplazado por un col-md-4 por que el titulo es mas largo-->
