--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -116,7 +116,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
         <div class="row g-10">
           <div class="col-md-8">
 
-            <a href="VIDEOS/video1GTAVI.html">
+            <a href="video1GTAVI.html">
               <img src="img/gta6.webp" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
 
@@ -137,7 +137,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
       <div class="card mb-3" style="max-width: 100%; background-color: black;">
         <div class="row g-10">
           <div class="col-md-8">
-            <a href="VIDEOS/video2CLUQUINBEL.html">
+            <a href="video2CLUQUINBEL.html">
               <img src="img/farmraid.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
           </div>
@@ -157,7 +157,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
         <div class="row g-10">
           <div class="col-md-8">
 
-            <a href="VIDEOS/video3CHOPSHOP.html">
+            <a href="video3CHOPSHOP.html">
               <img src="img/chopshop.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
             </a>
 
@@ -179,7 +179,7 @@ de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
           <div class="row g-10">
             <div class="col-md-8">
 
-              <a href="VIDEOS/video4DRAGRACES.html">
+              <a href="video4DRAGRACES.html">
                 <img src="img/dragraces.jpg" class="img-fluid rounded-start" alt="..." style="width: 100%;">
               </a>
             </div>
