--- a/Bodriostar/video2CLUQUINBEL.html
+++ b/Bodriostar/video2CLUQUINBEL.html
@@ -97,6 +97,6 @@
   </div>
 </nav>
 <iframe style="padding: 20px; height: 845px; width: 100%;" src="https://www.youtube.com/embed/R3HS6owS3P8?si=6520BMy1IDUZcBVF" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
-
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
