--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -83,7 +83,9 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Soporte</a>
         </li>
         <li class="nav-item" style="padding-left: 40px;">
+            <a href="https://gamedownloads.rockstargames.com/public/installer/Rockstar-Games-Launcher.exe?_gl=1*fqs0em*_ga*ODE4OTMzNDkxLjE3MTQwOTU3NzY.*_ga_PJQ2JYZDQC*MTcxNDI4NTA3MS4xMi4xLjE3MTQyODc0MDEuMC4wLjA.#_ga=2.234072990.1463000257.1714095776-818933491.1714095776">
           <button type="button" class="btn btn-warning cardtitlefont" style="color: black; font-size: 15px;">OBTENER LAUNCHER</button>
+            </a>
         </li>
 
       </ul>
