--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -102,7 +102,7 @@
 <!--Carrusel principal
 No se pueden ni imaginar el tiempo que nos costo encontrar una forma
 de hacer esto. Este mensaje es patrocinado por Abel a las 12:39 a.m.-->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel" data-bs-ride="carousel">
   <div class="carousel-indicators style=" style="padding-left: 800px;">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" ></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
