--- a/Bodriostar/index.html
+++ b/Bodriostar/index.html
@@ -229,6 +229,42 @@ y al revez?-->
 <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 97%; padding-left: 3%;">
   <div class="col">
     <div class="card h-100 border border-dark" style="background-color: black;">
+      <img src="img/andreasprix.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">2 de mayo de 2024</span></h5>
+        <p class="card-text cardcontentfont">Acelera tus ganancias con el triple de GTA$ y RP en carreras de ruedas descubiertas</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border border-dark" style="background-color: black;">
+      <img src="img/gtaplus2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">2 de mayo de 2024</span></h5>
+        <p class="card-text cardcontentfont">GTA+ Members Can Now Claim an Överflöd Entity MT Super Car and More</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border border-dark" style="background-color: black;">
+      <img src="img/lanoire.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title cardtitlefont">L.A. Noire<span class="carddatefont">1 de mayo de 2024</span></h5>
+        <p class="card-text cardcontentfont">Juega a L.A. Noire gratis con tu membresía de GTA+</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border border-dark" style="background-color: black;">
+      <img src="img/rolebonus.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title cardtitlefont">Red Dead Online<span class="carddatefont">30 de abril de 2024</span></h5>
+        <p class="card-text cardcontentfont">Consigue bonificaciones en todos los roles de especialista de Red Dead Online, gana el cuádruple de XP en las series destacadas y mucho más</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border border-dark" style="background-color: black;">
       <img src="img/nightbonus.jpg " class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">25 de abril de 2024</span></h5>
@@ -245,43 +281,6 @@ y al revez?-->
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card h-100 border border-dark" style="background-color: black;">
-      <img src="img/circoloco.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title cardtitlefont">Rockstar Games<span class="carddatefont">12 de abril de 2024</span></h5>
-        <p class="card-text cardcontentfont">CircoLoco Records presenta If You Want My Loving, de Prospa</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100 border border-dark" style="background-color: black;">
-      <img src="img/exbonus.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">11 de abril de 2024</span></h5>
-        <p class="card-text cardcontentfont">Recompensas dobles en ventas de mercancía especial y productos variados</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100 border border-dark" style="background-color: black;">
-      <img src="img/gtaplus.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">4 de abril de 2024</span></h5>
-        <p class="card-text cardcontentfont">Consigue GTA$ de bonificación, un supercoche Progen Itali GTB y mucho más con GTA+</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100 border border-dark" style="background-color: black;">
-      <img src="img/transraces.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title cardtitlefont">GTA Online<span class="carddatefont">4 de abril de 2024</span></h5>
-        <p class="card-text cardcontentfont">Compite en las nuevas carreras de transformación para llevarte el doble de GTA$ y RP</p>
-      </div>
-    </div>
-  </div>
-</div>
 <br><br><br><br><br>
 
 <!--Imagenes con links-->
