--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bodriostar</title>
+    <title>AbelRAMU</title>
     <link rel="stylesheet" href="Bodriostar/css/bootstrap.css">
     <link rel="stylesheet" href="Bodriostar/css/custom.css">
     <link rel="stylesheet" href="Bodriostar/css/font/stylesheet.css">
@@ -30,7 +30,7 @@
           <a class="nav-link" href="practicaparcial2.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="practicaparcial3.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 3</a>
+          <a class="nav-link disabled" href="practicaparcial3.html" tabindex="-1" aria-disabled="true" style="color: gray; padding-left: 40px;">Parcial 3</a>
         </li>
 
       </ul>
@@ -79,68 +79,3 @@
     
 </body>
 </html>
-
-<!--
-<li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:white ">
-                Contact
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Grand Theft Auto V</a></li>
-                <li><a class="dropdown-item" href="#">Grand Theft Auto Online</a></li>
-                <li><a class="dropdown-item" href="#">Grand Theft Auto The Triology</a></li>
-                <li><a class="dropdown-item" href="#">Red Dead Redemption 2</a></li>
-                <li><a class="dropdown-item" href="#">Red Dead Online</a></li>
-    
-              </ul>
-            </li>
-
--->
-
-
-
-
-
-
-
-
-<!--
-<!DOCTYPE html>
-<html lang="es">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Abel Archive</title>
-    </head>
-        <style>
-        body {
-          background-image: url('bg.webp');
-          background-repeat: repeat;
-          width: "500%";
-          color: white;
-        }
-            a:link {
-          color: white;
-          background-color: transparent;
-          text-decoration: none;
-        }
-        a:visited {
-          color: silver;
-          background-color: transparent;
-          text-decoration: none;
-        }
-        a:hover {
-          color: black;
-          background-color: transparent;
-          text-decoration: underline;
-        }
-        </style>
-    <body>
-    <h1><img style="vertical-align:middle" src="abelito.gif" width="5%">Mi portafolio</h1> 
-    <h2><img style="vertical-align:middle" src="familiarar.png" width="15%">Ramirez Urias Abel</h2><br>
-    <a href="practicaparcial1">Portafolio Parcial 1</a><br>
-    <a href="practicaparcial2">Portafolio Parcial 2</a>
-    </body>
-</html>
--->
