--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -1,5 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AbelRAMU Parcial 1</title>
+    <link rel="stylesheet" href="Bodriostar/css/bootstrap.css">
+    <link rel="stylesheet" href="Bodriostar/css/custom.css">
+    <link rel="stylesheet" href="Bodriostar/css/font/stylesheet.css">
+    <script src="js/jquery-3.7.1.js"></script>
+</head> 
+<body style="background-color:rgb(0, 50, 0);">
+
+<!--Barra superior-->
+<nav class="navbar navbar-expand-lg navbar-dark border border-dark" style="background-color: rgb(0, 100, 0);">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="index.html">
+      <img src="abelito.gif" alt="" href="index.html" width="40" height="40">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      
+        <li class="nav-item">
+          <a class="nav-link" href="practicaparcial1.html" style="color: white; padding-left: 40px;" >Parcial 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="practicaparcial2.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="practicaparcial3.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 3</a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<p class="titlesection">Practicas parcial 1</p>
+<div class="row row-cols-1 row-cols-md-3 g-5" style="width: 100%; padding-left: 3%;">
+    
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p1.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 1</h5>
+      <p class="card-text">Elementos basicos de HTML Parte 1</p>
+      <a href="parcial1/Practica1_Elementos_HTML_Parte1.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p2.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 2</h5>
+      <p class="card-text">Elementos basicos de HTML Parte 2</p>
+      <a href="parcial1/Practica2_Elementos_HTML_Parte2.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p3.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 3</h5>
+      <p class="card-text">Elementos HTML y propiedades CSS</p>
+      <a href="parcial1/Practica3_Elementos_HTML_Parte3.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p4.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 4</h5>
+      <p class="card-text">Manejo de imagenes en HTML</p>
+      <a href="parcial1/Practica4_Elementos_HTML_Parte4.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+  
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p5.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 5</h5>
+      <p class="card-text">Manejo de tablas en HTML</p>
+      <a href="parcial1/Practica5_Elementos_HTML_Parte5.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p6.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 6</h5>
+      <p class="card-text">Formularios en HTML</p>
+      <a href="parcial1/Practica6_Elementos_HTML_Parte6.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p7.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 7</h5>
+      <p class="card-text">Posicionamientos en HTML</p>
+      <a href="parcial1/Practica7_Elementos_HTML_Parte7.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p8.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 8</h5>
+      <p class="card-text">Juego de loteria</p>
+      <a href="parcial1/Practica8_Elementos_HTML_Parte8.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p9.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 9</h5>
+      <p class="card-text">Manejo de CSS</p>
+      <a href="parcial1/Practica9_Elementos_HTML_Parte9.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/parcial1/p10.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Practica 10</h5>
+      <p class="card-text">CSS Parte 2</p>
+      <a href="parcial1/Practica10_Elementos_HTML_Parte10.html" class="btn btn-primary stretched-link">Visitar</a>
+    </div>
+  </div>
+</div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <title></title>
         <meta charset="UTF-8">
@@ -103,3 +259,4 @@
 
     </body>
 </html>
+-->
