--- a/practicaparcial3.html
+++ b/practicaparcial3.html
@@ -38,71 +38,18 @@
   </div>
 </nav>
 
-<p class="titlesection">Practicas parcial 2</p>
+<p class="titlesection">Practicas parcial 3</p>
 <div class="row row-cols-1 row-cols-md-3 g-5" style="width: 100%; padding-left: 3%;">
     
   <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p1.png" class="card-img-top" alt="...">
+    <img src="parcial2/img/carousel3.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Practica 1</h5>
-      <p class="card-text">Introduccion a bootstrap</p>
-      <a href="parcial2/practica1.html" class="btn btn-primary stretched-link">Visitar</a>
+      <h5 class="card-title">Llegaste temprano...</h5>
+      <p class="card-text">Deberias volver a revisar esta pagina cuando... Pues, no se, quizas cuando el parcial 3 haya comenzado en primer lugar. ¿Que esperabas encontrar aqui?</p>
+      <a href="https://www.youtube.com/watch?v=zu2Eaw6Ohxc" class="btn btn-primary stretched-link">?</a>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p2.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Practica 2</h5>
-      <p class="card-text">Grids en bootstrap</p>
-      <a href="parcial2/practica2.html" class="btn btn-primary stretched-link">Visitar</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p3.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Practica 3</h5>
-      <p class="card-text">Componentes</p>
-      <a href="parcial2/practica3.html" class="btn btn-primary stretched-link">Visitar</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p4.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Practica 4</h5>
-      <p class="card-text">Componentes parte 2</p>
-      <a href="parcial2/practica4.html" class="btn btn-primary stretched-link">Visitar</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p5.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Practica 5</h5>
-      <p class="card-text">Componentes parte 3</p>
-      <a href="parcial2/practica5.html" class="btn btn-primary stretched-link">Visitar</a>
-    </div>
-  </div>
-  
-  <div class="card" style="width: 18rem;">
-    <img src="img/parcial2/p6.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Practica 6</h5>
-      <p class="card-text">Manejo de tablas en Bootstrap</p>
-      <a href="parcial2/practica6.html" class="btn btn-primary stretched-link">Visitar</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 20rem; background-color: rgb(15, 15, 15);">
-    <img src="img/parcial2/proyecto.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title cardtitlefont" style="color: orange;">Proyecto página web</h5>
-      <p class="card-text cardcontentfont">Recreacion de la pagina oficial de Rockstar Games, por Ramirez Urias Abel y Castañeda Rivas Jorge Alejandro</p>
-      <a href="Bodriostar/index.html" class="btn btn-warning stretched-link">Clic para calificar con 10</a>
-    </div>
-  </div>
 
   </div>
 </body>
