Disabled parcial3 link practicaparcial1.html

--- a/practicaparcial1.html
+++ b/practicaparcial1.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="practicaparcial2.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="practicaparcial3.html" tabindex="-1" aria-disabled="true" style="color: white; padding-left: 40px;">Parcial 3</a>
+          <a class="nav-link disabled" href="practicaparcial3.html" tabindex="-1" aria-disabled="true" style="color: gray; padding-left: 40px;">Parcial 3</a>
         </li>
 
       </ul>
