--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 97%; padding-left: 3%;">
   <div class="col">
     <div class="card h-100 border border-dark" style="background-color: rgb(0, 100, 0);">
-      <img src="p1thumnail.png" class="card-img-top" alt="...">
+      <img src="p1thumnail.gif" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title cardtitlefont">Parcial 1</h5>
         <p class="card-text cardcontentfont">
@@ -54,11 +54,22 @@
   </div>
   <div class="col">
     <div class="card h-100 border border-dark" style="background-color: rgb(0, 100, 0);">
-      <img src="p2thumnail.png" class="card-img-top" alt="...">
+      <img src="p2thumnail.gif" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title cardtitlefont">Parcial 2</h5>
         <p class="card-text cardcontentfont">
           <a href="practicaparcial2.html" class="btn btn-success stretched-link">Visitar</a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border border-dark" style="background-color: rgb(0, 100, 0);">
+      <img src="p3thumnail.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title cardtitlefont">Proyecto final parcial 3 (TEMP LINK)</h5>
+        <p class="card-text cardcontentfont">
+          <a href="Parcial 3/proyectofinal/index.html" class="btn btn-success stretched-link">Visitar</a>
         </p>
       </div>
     </div>
